# ezgui

./: CMakeLists.txt  Justfile  README.md  portfile.cmake  usage  vcpkg.json
demo/: main.cpp
src/: ezgui.cpp  ezgui.hpp
